--- a/package.json
+++ b/package.json
@@ -4,14 +4,17 @@
   "description": "A bot for pidor-of-the-day game",
   "main": "run.js",
   "scripts": {
-    "start": "node install.js && node run.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node run.js",
+    "init": "node install.js && node run.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon --inspect run.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "discord.js": "^11.6.4",
     "dotenv": "^6.2.0",
+    "pg": "^8.4.1",
     "sqlite3": "^4.2.0"
   },
   "devDependencies": {
