--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A bot for pidor-of-the-day game",
   "main": "run.js",
   "scripts": {
-    "start": "node run.js",
+    "start": "node pg.js",
     "init": "node install.js && node run.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon --inspect run.js"
