--- a/package.json
+++ b/package.json
@@ -14,10 +14,16 @@
   "dependencies": {
     "discord.js": "^11.6.4",
     "dotenv": "^6.2.0",
+    "eslint-config-prettier": "^6.14.0",
+    "eslint-plugin-prettier": "^3.1.4",
     "pg": "^8.4.1",
+    "prettier": "^2.1.2",
     "sqlite3": "^4.2.0"
   },
   "devDependencies": {
+    "eslint": "^7.11.0",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-plugin-import": "^2.22.1",
     "jest": "^23.6.0"
   }
 }
