--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "A bot for pidor-of-the-day game",
   "main": "run.js",
   "scripts": {
-    "start": "node console.log('production!')",
+    "start": "node run.js",
     "init": "node install.js && node run.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon --inspect run.js"
+    "dev": "nodemon --inspect run.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
