--- a/package.json
+++ b/package.json
@@ -7,23 +7,21 @@
     "start": "node run.js",
     "init": "node install.js && node run.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon --inspect run.js"
+    "dev": "nodemon run.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "discord.js": "^11.6.4",
     "dotenv": "^6.2.0",
-    "pg": "^8.4.1",
-    "sqlite3": "^4.2.0"
+    "pg": "^8.4.1"
   },
   "devDependencies": {
-    "eslint": "^7.11.0",
+    "eslint": "^7.12.0",
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-config-prettier": "^6.14.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^3.1.4",
-    "jest": "^23.6.0",
     "prettier": "^2.1.2"
   }
 }
