--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@discordjs/opus": "^0.3.3",
     "discord.js": "^12.4.1",
     "dotenv": "^6.2.0",
+    "ffmpeg": "0.0.4",
     "pg": "^8.4.1"
   },
   "devDependencies": {
