--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "pidor-bot",
   "version": "2.0.0",
   "description": "A bot for pidor-of-the-day game",
-  "main": "run.js",
+  "main": "run.ts",
   "scripts": {
-    "start": "node run.js",
-    "init": "node install.js && node run.js",
-    "dev": "nodemon run.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node run.ts",
+    "init": "node install.js && node run.ts",
+    "dev": "nodemon run.ts",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start:ts": "tsc && node build/run.js",
+    "dev:ts": "tsc && nodemon build/run.js"
   },
   "author": "",
   "license": "ISC",
@@ -22,11 +24,16 @@
     "pg": "^8.4.1"
   },
   "devDependencies": {
+    "@types/node": "^14.14.22",
+    "@types/pg": "^7.14.9",
+    "@types/ws": "^7.4.0",
     "eslint": "^7.12.0",
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-config-prettier": "^6.14.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^3.1.4",
-    "prettier": "^2.1.2"
+    "prettier": "^2.1.2",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.1.3"
   }
 }
